# mini_markdown

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: blocks.rs  iter.rs  lexer.rs  lib.rs
tests/: e2e.rs  iter_test.rs  lexer.rs  sanitation.rs  tag_removal.rs  tests.rs
tests/block_tests/: all.rs
tests/commonmark/: atx_headings.rs  autolinks.rs  backslash_escapes.rs  blank_lines.rs  block_quotes.rs  code_spans.rs  emphasis_and_strong_emphasis.rs  entity_and_numeric_character_references.rs  fenced_code_blocks.rs  hard_line_breaks.rs  html_blocks.rs  images.rs  indented_code_blocks.rs  inlines.rs  link_reference_definitions.rs  links.rs  list_items.rs  lists.rs  paragraphs.rs  precedence.rs  raw_html.rs  setext_headings.rs  soft_line_breaks.rs  tabs.rs  textual_content.rs  thematic_breaks.rs
tests/iter_tests/: all.rs
