[package]
name = "mini_markdown"
version = "0.2.9"
authors = ["Jon Moroney <darakian@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = "Small markdown renderer"
homepage = "https://github.com/darakian/mini_markdown"
repository = "https://github.com/darakian/mini_markdown"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
